2004-06-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * gdcmDocEntry::PrintCommonPart() and ::WriteCommonPart() removed.
     Use the gdcmDocEntry::Print() and Write() instead.

2004-06-22 Jean-Pierre Roux
   In order : to write Sequences, whatever their imbrication level, 
	         : to allow user to create his own Sequences
	a lot of modif where necessary (adding, moving, or virtualising methods)

WARNING : save your own sources *before* cvs up !
	
	- gdcmBinEntry
	  ADD virtual void Write(FILE *fp, FileType filetype);
	  
   - gdcmDocEntry
	  ADD virtual void Write(FILE *fp, FileType filetype);
	  ADD void gdcmDocEntry::WriteCommonPart(FILE *fp, FileType filetype);
	  
	- gdcmDocEntrySet
	  ADD virtual void Write (FILE *fp, FileType filetype)=0;
	  ADD	virtual gdcmDocEntry *GetDocEntryByNumber(guint16 group,guint16 element) = 0;
     ADD gdcmDocEntry *GetDocEntryByName(std::string name);
     ADD virtual std::string GetEntryByNumber(guint16 group,guint16 element) = 0;
     ADD std::string GetEntryByName(TagName name);		         
     ADD gdcmDictEntry *NewVirtualDictEntry(guint16 group, 
                                            guint16 element,
                                            std::string vr     = "unkn",
                                            std::string fourth = "unkn",
                                            std::string name   = "unkn"); 
	  ADD gdcmValEntry *NewValEntryByNumber(guint16 group, guint16 element); 												 
     ADD gdcmBinEntry *NewBinEntryByNumber(guint16 group, guint16 element); 	
     ADD gdcmDocEntry *NewDocEntryByNumber(guint16 group, guint16 element); 
     ADD gdcmDocEntry *NewDocEntryByName  (std::string Name);   
     ADD gdcmDictEntry *GetDictEntryByName   (std::string Name);
     ADD gdcmDictEntry *GetDictEntryByNumber(guint16, guint16);
	  REM virtual gdcmDocEntry *NewDocEntryByNumber(guint16 group, guint16 element)=0;
     REM virtual gdcmDocEntry *NewDocEntryByName  (std::string Name)=0;
	  